--- a/main.html
+++ b/main.html
@@ -4,10 +4,32 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		table,div{
+			background-color: lightslategray;
+		}
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="imageContainer">
+		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSg-3382ZgdUhzsOz0VYE8KVNtX_HTwTxRSps08Nli1&s">
+	</div>
+
+	<table border="2px">
+		<tr>
+			<td width="200"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRIYPmj9NWg1B1yFlOeepkXbEc5Oc-D7L5l8qLWobZ8&s"></td>
+			<td width="600"><p>Create an HTML webpage that describes architectural information. The webpage must adhere to the following specifications:</p></td>
+			<td width="200"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRIYPmj9NWg1B1yFlOeepkXbEc5Oc-D7L5l8qLWobZ8&s"></td>
+		</tr>
+
+		<tr>
+			<td width="200"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRIYPmj9NWg1B1yFlOeepkXbEc5Oc-D7L5l8qLWobZ8&s"></td>
+			<td width="600"><p>Create an HTML webpage that describes architectural information. The webpage must adhere to the following specifications:</p></td>
+			<td width="200"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRIYPmj9NWg1B1yFlOeepkXbEc5Oc-D7L5l8qLWobZ8&s"></td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
